# fillCamp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
mini-app/: next-env.d.ts  package.json  tsconfig.json
mini-app/app/: globals.css  layout.tsx  page.tsx
mini-app/app/game/: page.tsx
mini-app/app/profile/: page.tsx
mini-app/app/referrals/: page.tsx
mini-app/app/shop/: page.tsx
mini-app/context/: CartContext.tsx
mini-app/hooks/: useTelegram.ts
src/: migrate.py  run.py
src/alembic/: env.py
src/alembic/versions/: 4ed8aed199b1_initial_schema.py  b559a85c22b3_create_broadcasts_table.py  d3b10997a1f2_initial.py
src/app/: main.py
src/app/api/: deps.py
src/app/core/: config.py  constants.py  logger.py
src/app/db/: session.py
src/app/models/: __init__.py  amocrm_models.py  balance_models.py  broadcast_models.py  game_models.py  news_models.py  referral_models.py  shop_models.py  user_models.py
src/app/repositories/: __init__.py  amo_transaction_repo.py  balance_repo.py  base.py  broadcast_repo.py  game_repo.py  news_repo.py  order_repo.py  referral_repo.py  shop_repo.py  user_repo.py
src/app/schemas/: amocrm_schemas.py  miniapp_schemas.py
src/app/services/: amocrm_client.py  amocrm_service.py  loyalty_service.py  (+4 more)
src/telegram/: bot.py  handlers.py
src/tests/: conftest.py  test_amocrm_client.py  test_amocrm_e2e.py  test_api_routes.py  test_auth_with_referral.py  test_game_ws.py  test_loyalty_service.py  test_referral_service.py  test_shop_create_order.py  test_user_routes.py
(+9 files in other folders)
