[project]
name = "FillCamp.Server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.17.1",
    "dynaconf>=3.2.12",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.121.0",
    "pydantic>=2.11.10",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "sqlalchemy>=2.0.44",
]
